force-app/main/default/objects/Opportunity_Team_Role__c/Opportunity_Team_Role__c.object-meta.xml
<CustomObject>
    <label>Opportunity Team Role</label>
    <nameField>
        <label>Opportunity Team Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Team Role</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>