force-app/main/default/objects/Opportunity_Team_Role__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Opportunity Team Role</relationshipLabel>
    <relationshipName>Opportunity_Team_Role</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>