force-app/main/default/objects/Opportunity_Team_Role__c/fields/Opportunity_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Role__c</fullName>
    <label>Opportunity Role</label>
    <length>55</length>
    <type>Text</type>
</CustomField>